[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osv_sync"
version = "0.1.0"
description = "OSV 同步工具"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Binary-1024", email = "lucky.dogs.kevin@gmail.com"},
]
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "beautifulsoup4>=4.11.0",
    "tqdm>=4.64.0",
    "playwright>=1.30.0",
    "pandas>=1.5.0",
    "urllib3>=1.26.0",
    "certifi>=2023.5.7",
    "charset-normalizer>=2.0.0",
    "idna>=2.8",
    "lxml>=4.9.0",
    "soupsieve>=2.0",
    "numpy>=1.22.0",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    "six>=1.10.0",
    "tzdata>=2022.1",
    "packaging>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "types-requests>=2.32.0.20250515",
    "types-PyYAML>=6.0.0",
    "responses>=0.22.0",
    "pytest-cov>=4.0.0",
    "types-beautifulsoup4>=4.11.0",
    "types-tqdm>=4.64.0",
    "pytest-mock>=3.10.0",
    "pytest-playwright>=0.3.0",
    "pytest-responses>=0.5.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
osv-sync = "osv_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 